# blackjack-backend

./: .gitignore  Makefile  db.sqlite3  pyproject.toml  requirements.txt
api/: models.py  views.py
api/migrations/: 0001_initial.py  0002_gamestate_active_gamestate_winner_and_more.py
blackjack/: asgi.py  db.sqlite3  settings.py  urls.py
blackjack/api/: models.py  tests.py  views.py
blackjack/blackjack/: settings.py  urls.py  wsgi.py
static/: README.md  index.html  old-script.js  package-lock.json  package.json  script.js
